--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
       .ap-button {
         cursor: pointer !important;
       }
+      .youtube {
+        color: white;
+        display: inline-block;
+        background-color: red;
+        border-radius: 25%;
+        padding: 5px 3px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
 
       .alert {
         display: none;
@@ -840,8 +848,13 @@
                     target="_blank"
                     class="theme_btn wow fadeInUp2 animated"
                     data-wow-delay=".3s"
-                    ><i style="padding-right: 10px" class="fas fa-play"></i
-                    >Watch Demo Videos</a
+                  >
+                    <img
+                      src="assets/img/icon/youtube.png"
+                      alt=""
+                      style="padding-right: 5px"
+                    />
+                    Watch Demo Videos</a
                   >
                 </div>
               </div>
