--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
       <!--great-deal-area start-->
 
       <section
-        class="great-deal-area pt-150 pb-90  pt-md-50 pt-s-50 pb-md-30 pt-xs-0 pb-xs-40"
+        class="great-deal-area pt-150 pb-40  pt-md-50 pt-s-50 pb-md-30 pt-xs-0 pb-xs-40"
       >
         <div class="container">
           <div class="row justify-content-xl-center justify-content-start">
@@ -894,7 +894,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   <div class="img-bg pos-rel">
                     <img
                       class="chose_05 pl-70 pl-lg-0 pl-md-0 pl-xs-0"
-                      src="assets/img/chose/05.png"
+                      src="assets/img/instructor/bala3.png"
                       alt="Chose-img"
                     />
                   </div>
@@ -943,6 +943,19 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                     />
                     Access Free Lectures</a
                   >
+                   <a
+                    href="https://www.youtube.com/@Edentu.official/playlists"
+                    target="_blank"
+                    class="theme_btn wow fadeInUp2 animated"
+                    data-wow-delay=".3s"
+                  >
+                    <img
+                      src="assets/img/icon/notes.png"
+                      alt=""
+                      style="padding-right: 5px"
+                    />
+                    Access Sample Notes</a
+                  >
                 </div>
               </div>
             </div>
@@ -953,7 +966,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
       <!--great-deal-area end-->
 
       <!-- case-gallery start -->
-      <section class="feature-course pb-80 pt-md-95 pb-md-80 pt-xs-95 pb-xs-0">
+      <section class="feature-course pb-80 pt-md-95 pb-md-80 pt-xs-40 pb-xs-0">
         <div class="container">
           <div class="row">
             <div class="col-xl-12">
@@ -965,8 +978,8 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
           <div class="row justify-content-center">
             <div class="col-xl-12 text-center">
               <div class="portfolio-menu mb-45">
-                <button class="gf_btn active" data-filter=".cat2">BDS</button>
-                <button class="gf_btn" id="offersButton" data-filter=".cat1">MDS</button>
+                <button class="gf_btn active"  data-filter=".cat1">MDS</button>
+                <button class="gf_btn " id="offersButton" data-filter=".cat2">BDS</button>
                 <button class="gf_btn " id="offersButton" data-filter=".offer">Offers</button>
               </div>
             </div>
