--- a/course-details.html
+++ b/course-details.html
@@ -205,15 +205,15 @@
                           aria-labelledby="navbarDropdown3"
                         >
                           <li>
-                            <a class="dropdown-item" href="about.html"
-                              >About Us</a
+                            <a class="dropdown-item" href="sample-materials.html"
+                              >Free Materials</a
                             >
                           </li>
                           </li>
                           <li>
-                            <a
+                             <a
                               class="dropdown-item"
-                              href="instructor-profile.html"
+                              href="instructor.html"
                               >Instructors</a
                             >
                           </li>
@@ -363,58 +363,10 @@
       <!-- side-mobile-menu start -->
       <nav class="side-mobile-menu">
         <ul id="mobile-menu-active">
-          <li class="has-dropdown">
-            <a href="index.html">Home</a>
-            <ul class="sub-menu">
-              <li><a href="index.html">Home Style 1</a></li>
-              <li><a href="index-2.html">Home Style 2</a></li>
-              <li><a href="index-3.html">Home Style 3</a></li>
-            </ul>
-          </li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li class="has-dropdown">
-            <a href="#">Quick Links</a>
-            <ul class="sub-menu">
-              <li><a href="instructor-profile.html">Instructors</a></li>
-             
+            <li><a href="instructor-profile.html">Instructors</a></li>
               <li><a href="https://study.edentu.com/">Sign Up</a></li>
-            </ul>
-          </li>
-          <li class="has-dropdown">
-            <a href="#">Courses</a>
-            <ul class="sub-menu">
-             <li>
-                            <a  href="course-details.html"
-                              >NEET MDS</a
-                            >
-                          </li>
-                          <li>
-                            <a  href="course-details.html"
-                              >First Year BDS</a
-                            >
-                          </li>
-                          <li>
-                            <a  href="course-details.html"
-                              >Second Year BDS</a
-                            >
-                          </li>
-                          <li>
-                            <a  href="course-details.html"
-                              >Third Year BDS</a
-                            >
-                          </li>
-                          <li>
-                            <a  href="course-details.html"
-                              >First Year Part-1</a
-                            >
-                          </li>
-                          <li>
-                            <a  href="course-details.html"
-                              >First Year Part-2</a
-                            >
-                          </li>
-            </ul>
-          </li>
           <li><a href="contact.html">Contacts Us</a></li>
         </ul>
       </nav>
