--- a/index-3.html
+++ b/index-3.html
@@ -207,9 +207,7 @@
                           aria-labelledby="navbarDropdown3"
                         >
                           <li>
-                            <a class="dropdown-item" href="about.html"
-                              >About Us</a
-                            >
+                            <a class="dropdown-item" href="">Free Materials</a>
                           </li>
                           <li>
                             <a class="dropdown-item" href="courses.html"
