sample note link

--- a/index.html
+++ b/index.html
@@ -885,12 +885,14 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                     data-wow-delay=".2s"
                   >
                     <li>Each year syllabus covered in less than 100 hours</li>
-                    <li>Curated online and printed study material</li>
-                    <li>Previous 10 years of university question paper</li>
+                    <li>Curated study material with QR integration</li>
+                    <li>Question papers from the last 10 years</li>
                     <li>Free Question bank worth 30000+ MCQs</li>
                     <li>
-                      Personal mentorship and live discussions from dental
-                      experts
+                       Personalized Mentorship for students
+                    </li>
+                    <li>
+                      Live discussions from nation's best faculty
                     </li>
                   </ul>
                 <a
@@ -907,8 +909,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                     Free Lectures</a
                   >
                    <a
-                    href="https://www.youtube.com/@Edentu.official/playlists"
-                    target="_blank"
+                    href="sample-materials.html"
                     class="theme_btn wow fadeInUp2 animated"
                     data-wow-delay=".3s"
                   >
