--- a/contact.html
+++ b/contact.html
@@ -361,7 +361,7 @@
                   <h2>Get In Touch With Us</h2>
 
                 </div>
-                <div class="single-contact-box d-flex align-items-center justify-content-center cb-1 mb-30" style="flex-wrap: wrap;">
+                <div class="single-contact-box d-flex align-items-center  cb-1 mb-30" ">
                   <div class="contact__iocn">
                     <img
                       src="assets/img/icon/material-location-on.svg"
@@ -372,7 +372,7 @@
                     <h5>14/291 N, Suit 61 A, First Floor, A Square, Edathala PO, Kuzhivelippady, Cochin, Kerala-683561</h5>
                   </div>
                 </div>
-                <div class="single-contact-box d-flex align-items-center justify-content-center cb-2 mb-30" style="flex-wrap: wrap;">
+                <div class="single-contact-box d-flex align-items-center  cb-2 mb-30" style="flex-wrap: wrap;">
                   <div class="contact__iocn">
                     <img src="assets/img/icon/phone-alt.svg" alt="" />
                   </div>
@@ -381,7 +381,7 @@
                   
                   </div>
                 </div>
-                <div class="single-contact-box d-flex align-items-center justify-content-center cb-3 mb-30" style="flex-wrap: wrap;">
+                <div class="single-contact-box d-flex align-items-center  cb-3 mb-30" style="flex-wrap: wrap;">
                   <div class="contact__iocn">
                     <img src="assets/img/icon/feather-mail.svg" alt="" />
                   </div>
@@ -424,8 +424,7 @@
                 </a>
               </div>
               <p>
-                Lorem ipsum dolor sit amet, consetetur sadip scing elitr, sed di
-                nonumy eirmod temporinvi dunt ut labore lorem ipsum.
+                The best guide you could ever get for your dental learning. A comprehensive, all-encompassing solution to learn the dental curriculum effectively.
               </p>
               <div class="social-media footer__social mt-30">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
