--- a/course-details.html
+++ b/course-details.html
@@ -949,8 +949,7 @@
                 </a>
               </div>
               <p>
-                Lorem ipsum dolor sit amet, consetetur sadip scing elitr, sed di
-                nonumy eirmod temporinvi dunt ut labore lorem ipsum.
+                The best guide you could ever get for your dental learning. A comprehensive, all-encompassing solution to learn the dental curriculum effectively.
               </p>
               <div class="social-media footer__social mt-30">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
