--- a/instructor.html
+++ b/instructor.html
@@ -477,7 +477,7 @@ His significant contributions to the "Dental Pulse - NEET MDS Entrance" book and
                       <h4 class="sub-title ">
                         Dr. M.S Balakrishna 
                       </h4>
-                      <p>Oral and Maxillofacial Surgery</p>
+                      <p>BDS, MDS Oral and Maxillofacial Surgery</p>
                     </div>
                   </div>
                 </div>
@@ -491,7 +491,7 @@ His significant contributions to the "Dental Pulse - NEET MDS Entrance" book and
                       <h4 class="sub-title">
                        Dr. Hridya Gokhalai
                       </h4>
-                      <p>Pedodontics</p>
+                      <p>BDS, MDS Pedodontics</p>
                     </div>
                   </div>
                 </div>
@@ -505,7 +505,7 @@ His significant contributions to the "Dental Pulse - NEET MDS Entrance" book and
                       <h4 class="sub-title">
                        Dr. Raghavi. C  
                       </h4>
-                      <p>Biochemistry</p>
+                      <p>MBBS, MD, DNB Biochemistry</p>
                     </div>
                   </div>
                 </div>
@@ -519,7 +519,7 @@ His significant contributions to the "Dental Pulse - NEET MDS Entrance" book and
                       <h4 class="sub-title ">
                         Dr. Nandhini Aishwarya
                       </h4>
-                      <p>Anatomy</p>
+                      <p>MBBS, MD Anatomy</p>
                     </div>
                   </div>
                 </div>
@@ -533,7 +533,7 @@ His significant contributions to the "Dental Pulse - NEET MDS Entrance" book and
                       <h4 class="sub-title">
                         Dr.Gopikrishnan V
                       </h4>
-                      <p>Oral pathology</p>
+                      <p>BDS, MDS Oral pathology</p>
                     </div>
                   </div>
                 </div>
@@ -547,7 +547,7 @@ His significant contributions to the "Dental Pulse - NEET MDS Entrance" book and
                       <h4 class="sub-title">
                         Dr. P  Jayanthi   
                       </h4>
-                      <p>Oral pathology</p>
+                      <p>BDS, MDS Oral pathology</p>
                     </div>
                   </div>
                 </div>
@@ -561,7 +561,7 @@ His significant contributions to the "Dental Pulse - NEET MDS Entrance" book and
                       <h4 class="sub-title">
                        Dr. Subramony B
                       </h4>
-                      <p>Periodontics</p>
+                      <p>BDS, MDS Periodontics</p>
                     </div>
                   </div>
                 </div>
@@ -575,7 +575,7 @@ His significant contributions to the "Dental Pulse - NEET MDS Entrance" book and
                       <h4 class="sub-title">
                        Dr.Ajna Alex
                       </h4>
-                      <p>Pedodontics</p>
+                      <p>BDS, MDS Pedodontics</p>
                     </div>
                   </div>
                 </div>
@@ -604,7 +604,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title ">
                         Dr. Nandhini Aishwarya
                       </h4>
-                      <p>Anatomy</p>
+                      <p>MBBS, MD Anatomy</p>
                     </div>
                   </div>
                 </div>
@@ -632,7 +632,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title">
                        Dr. Aneen Suresh
                       </h4>
-                      <p>Periodontics</p>
+                      <p>BDS, MDS Periodontics</p>
                     </div>
                   </div>
                 </div>
@@ -646,7 +646,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title">
                         Dr. Geethanjali. M
                       </h4>
-                      <p>Microbiology</p>
+                      <p>MBBS, MD Microbiology</p>
                     </div>
                   </div>
                 </div>
@@ -660,7 +660,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title">
                       Dr. Maria Jose
                       </h4>
-                      <p>Pharmacology</p>
+                      <p>MBBS, MD Pharmacology</p>
                     </div>
                   </div>
                 </div>
@@ -674,7 +674,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title">
                         Dr. Uthkal M.P  
                       </h4>
-                      <p>Oral Medicine and Radiology</p>
+                      <p>BDS, MDS Oral Medicine and Radiology</p>
                     </div>
                   </div>
                 </div>
@@ -688,7 +688,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title">
                        Dr. Sreelekha Sreedhar
                       </h4>
-                      <p>General Medicine</p>
+                      <p>BDS</p>
                     </div>
                   </div>
                 </div>
@@ -702,7 +702,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title ">
                         Dr. M.S Balakrishna 
                       </h4>
-                      <p>Oral and Maxillofacial Surgery</p>
+                      <p>BDS, MDS Oral and Maxillofacial Surgery</p>
                     </div>
                   </div>
                 </div>
@@ -716,7 +716,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title">
                         Dr.Gopikrishnan V
                       </h4>
-                      <p>Oral pathology</p>
+                      <p>BDS, MDS Oral pathology</p>
                     </div>
                   </div>
                 </div>
@@ -730,7 +730,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title ">
                         Dr. Shreshta  Sathish
                       </h4>
-                      <p>Prosthodontics</p>
+                      <p>BDS, MDS Prosthodontics</p>
                     </div>
                   </div>
                 </div>
@@ -744,7 +744,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title ">
                          Dr. Sujatha. R
                       </h4>
-                      <p>Biochemistry</p>
+                      <p>MBBS, MD Biochemistry</p>
                     </div>
                   </div>
                 </div>
@@ -758,7 +758,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title ">
                          Dr. Krishnakumar. R
                       </h4>
-                      <p>Pedodontics</p>
+                      <p>BDS, MDS Pedodontics </p>
                     </div>
                   </div>
                 </div>
@@ -772,7 +772,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title ">
                          Dr. Abdul Zaheer
                       </h4>
-                      <p>Public Health Dentistry</p>
+                      <p>BDS, MDS Public Health Dentistry</p>
                     </div>
                   </div>
                 </div>
@@ -801,8 +801,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                 </a>
               </div>
               <p>
-                Lorem ipsum dolor sit amet, consetetur sadip scing elitr, sed di
-                nonumy eirmod temporinvi dunt ut labore lorem ipsum.
+                The best guide you could ever get for your dental learning. A comprehensive, all-encompassing solution to learn the dental curriculum effectively.
               </p>
               <div class="social-media footer__social mt-30">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
