--- a/index-2.html
+++ b/index-2.html
@@ -1957,8 +1957,9 @@
             <div class="footer__widget footer__widget__two mb-30">
               <h4 class="sub-title mb-35">About Us</h4>
               <p>
-                Lorem ipsum dolor sit amet, consetetur sadip scing elitr, sed di
-                nonumy eirmod temporinvi dunt ut labore lorem ipsum.
+                The best guide you could ever get for your dental learning. A
+                comprehensive, all-encompassing solution to learn the dental
+                curriculum effectively.
               </p>
               <h5 class="mail-to mt-25">info@example.com</h5>
               <p class="phone-num mt-15">+00 235 695 58 , +0239564</p>
