--- a/course-details.html
+++ b/course-details.html
@@ -365,8 +365,14 @@
         <ul id="mobile-menu-active">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="achievements-page.html">Achievements</a></li>
+          <li class="has-dropdown">
+            <a href="#">Quick Links</a>
+            <ul class="sub-menu">
+            <li><a href="sample-materials.html">Free Materials</a></li>
             <li><a href="instructor-profile.html">Instructors</a></li>
-              <li><a href="https://study.edentu.com/">Sign Up</a></li>
+            <li><a href="https://study.edentu.com/">Sign Up</a></li></ul>
+            </li>  
           <li><a href="contact.html">Contacts Us</a></li>
         </ul>
       </nav>
