--- a/index-2.html
+++ b/index-2.html
@@ -2015,7 +2015,7 @@
             <div class="col-lg-6 col-md-12 mb-20">
               <div class="copyright">
                 <p>
-                  Copyright@ 2021 <a href="#">Edentu</a>. All Rights Reserved
+                  Copyright@ 2023 <a href="#">Edentu</a>. All Rights Reserved
                 </p>
               </div>
             </div>
@@ -2055,5 +2055,23 @@
     <script src="assets/js/jquery.easypiechart.js"></script>
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>
+      document
+        .getElementById("google-button")
+        .addEventListener("click", function () {
+          window.open(
+            "https://play.google.com/store/apps/details?id=com.elearning.edentumds",
+            "_blank"
+          );
+        });
+      document
+        .getElementById("apple-button")
+        .addEventListener("click", function () {
+          window.open(
+            "https://apps.apple.com/eg/app/edentu/id1624471043",
+            "_blank"
+          );
+        });
+    </script>
   </body>
 </html>
