--- a/instructor-profile.html
+++ b/instructor-profile.html
@@ -615,10 +615,24 @@
                 curriculum effectively.
               </p>
               <div class="social-media footer__social mt-30">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                <a
+                  target="_blank"
+                  href="https://www.instagram.com/edentu_mds/?igshid=MzRlODBiNWFlZA%3D%3D"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+                <a target="_blank" href=" https://t.me/edentuapp"
+                  ><i class="fab fa-telegram-plane"></i
+                ></a>
+                <a
+                  target="_blank"
+                  href="https://youtube.com/@Edentu.official?si=YCRUTut2WW-AObva"
+                  ><i class="fab fa-youtube"></i
+                ></a>
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/edentu.official/"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -627,14 +641,17 @@
             data-wow-delay=".3s"
           >
             <div class="footer__widget mb-30 pl-40 pl-md-0 pl-xs-0">
-              <h6 class="widget-title mb-35">Contact us</h6>
+              <h6 class="widget-title mb-35">
+                <a href="contact.html">Contact us</a>
+              </h6>
               <ul class="fot-list">
-                <li><a href="#">info@example.com</a></li>
-                <li><a href="#">+00 235 695 58</a></li>
-                <li><a href="#">Terms & Conditions</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="contact.html">Contacts</a></li>
-                <li><a href="#">Our Careers</a></li>
+                <li><a href="mailto:info@edentu.com">info@edentu.com</a></li>
+                <li><a href="tel:+919207444480">+91 9207 444 480</a></li>
+                <li>
+                  <b>Address:</b><br />
+                  14/291 N, Suit 61 A, First Floor, A Square, Edathala PO,
+                  Kuzhivelippady, Cochin, Kerala-683561
+                </li>
               </ul>
             </div>
           </div>
@@ -646,9 +663,9 @@
               <h6 class="widget-title mb-35">Quick Links</h6>
               <ul class="fot-list">
                 <li><a href="about.html">About US</a></li>
-                <li><a href="#">Explore Pages</a></li>
-                <li><a href="#">Our Services</a></li>
-                <li><a href="#">Destinations</a></li>
+                <li><a href="index.html#edentu-about">Our Speciality</a></li>
+                <li><a href="index.html#course-section">Our Courses</a></li>
+                <li><a href="instructor.html">Our Instructors</a></li>
               </ul>
             </div>
           </div>
@@ -657,12 +674,35 @@
             data-wow-delay=".7s"
           >
             <div class="footer__widget mb-30 pl-150 pl-lg-0 pl-md-0 pl-xs-0">
-              <h6 class="widget-title mb-35">Features</h6>
+              <h6 class="widget-title mb-35">Highlights</h6>
               <ul class="fot-list mb-30">
-                <li><a href="index.html">Home Page</a></li>
-                <li><a href="#">Testimonials</a></li>
-                <li><a href="blog.html">Latest News</a></li>
-                <li><a href="#">Help Center</a></li>
+                <li><a href="achievements-page.html">Achievements</a></li>
+                <li><a href="news-page.html">Latest News</a></li>
+                <li><a href="index.html#testimonials">Testimonials</a></li>
+                <li>
+                  <button
+                    id="google-button"
+                    class="theme_btn2 search_btn2 mr-10"
+                  >
+                    <img
+                      src="assets/img/icon/store-icon1.png"
+                      alt=""
+                      class="store-logo2"
+                    />
+                  </button>
+                </li>
+                <li style="padding-top: 10px">
+                  <button
+                    id="apple-button"
+                    class="theme_btn2 d-flex search_btn2 mr-10"
+                  >
+                    <img
+                      src="assets/img/icon/store-icon2.png"
+                      alt=""
+                      class="store-logo2"
+                    />
+                  </button>
+                </li>
               </ul>
             </div>
           </div>
@@ -674,7 +714,7 @@
             <div class="col-lg-12">
               <div class="copyright text-center">
                 <h5>
-                  Copyright@ 2021 <a href="#">Edentu</a>. All Rights Reserved
+                  Copyright@ 2023 <a href="#">Edentu</a>. All Rights Reserved
                 </h5>
               </div>
             </div>
@@ -705,5 +745,23 @@
     <script src="assets/js/jquery.easypiechart.js"></script>
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>
+      document
+        .getElementById("google-button")
+        .addEventListener("click", function () {
+          window.open(
+            "https://play.google.com/store/apps/details?id=com.elearning.edentumds",
+            "_blank"
+          );
+        });
+      document
+        .getElementById("apple-button")
+        .addEventListener("click", function () {
+          window.open(
+            "https://apps.apple.com/eg/app/edentu/id1624471043",
+            "_blank"
+          );
+        });
+    </script>
   </body>
 </html>
