--- a/price.html
+++ b/price.html
@@ -789,10 +789,24 @@
                 curriculum effectively.
               </p>
               <div class="social-media footer__social mt-30">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                <a
+                  target="_blank"
+                  href="https://www.instagram.com/edentu_mds/?igshid=MzRlODBiNWFlZA%3D%3D"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+                <a target="_blank" href=" https://t.me/edentuapp"
+                  ><i class="fab fa-telegram-plane"></i
+                ></a>
+                <a
+                  target="_blank"
+                  href="https://youtube.com/@Edentu.official?si=YCRUTut2WW-AObva"
+                  ><i class="fab fa-youtube"></i
+                ></a>
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/edentu.official/"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -848,7 +862,7 @@
             <div class="col-lg-12">
               <div class="copyright mb-35 text-center">
                 <h5>
-                  Copyright@ 2021 <a href="#">Edentu</a>. All Rights Reserved
+                  Copyright@ 2023 <a href="#">Edentu</a>. All Rights Reserved
                 </h5>
               </div>
             </div>
@@ -879,5 +893,23 @@
     <script src="assets/js/jquery.easypiechart.js"></script>
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>
+      document
+        .getElementById("google-button")
+        .addEventListener("click", function () {
+          window.open(
+            "https://play.google.com/store/apps/details?id=com.elearning.edentumds",
+            "_blank"
+          );
+        });
+      document
+        .getElementById("apple-button")
+        .addEventListener("click", function () {
+          window.open(
+            "https://apps.apple.com/eg/app/edentu/id1624471043",
+            "_blank"
+          );
+        });
+    </script>
   </body>
 </html>
