meta data update

--- a/instructor.html
+++ b/instructor.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Edentu - Dental E-learning App</title>
+    <title>Home | Edentu</title>
     <meta
       name="keywords"
       content="online education, e-learning, coaching, education, teaching, learning"
     />
     <meta
       name="description"
-      content="Edentu is a e-learnibg HTML template for all kinds of education, coaching, online education website"
+      content="The best guide you could ever get for your dental learning. A comprehensive, all-encompassing solution to learn the dental curriculum effectively."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
