--- a/courses.html
+++ b/courses.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="description"
-      content="Edentu is a e-learnibg HTML template for all kinds of education, coaching, online education website"
+      content="The best guide you could ever get for your dental learning. A comprehensive, all-encompassing solution to learn the dental curriculum effectively."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
