meta data update

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Edentu - Dental E-learning App</title>
+    <title>About | Edentu</title>
     <meta
       name="keywords"
       content="online education, e-learning, coaching, education, teaching, learning"
