--- a/index-2.html
+++ b/index-2.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="description"
-      content="The best guide you could ever get for your dental learning. A comprehensive, all-encompassing solution to learn the dental curriculum effectively."
+      content="Edentu is a e-dental learning platform crafted by dentists for easy and effective learning."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -338,10 +338,9 @@
           <div class="info-widget">
             <h4 class="offset-title mb-20">About Us</h4>
             <p class="mb-30">
-              But I must explain to you how all this mistaken idea of denouncing
-              pleasure and praising pain was born and will give you a complete
-              account of the system and expound the actual teachings of the
-              great explore
+              A Comprehensive , all encompassing solution you could ever get for
+              an adaptive & technology integrated learning experience through
+              out your journey from BDS to NEET MDS
             </p>
             <a class="theme_btn theme_btn_bg" href="contact.html">Contact Us</a>
           </div>
