--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="description"
-      content="The best guide you could ever get for your dental learning. A comprehensive, all-encompassing solution to learn the dental curriculum effectively."
+      content="Edentu is a e-dental learning platform crafted by dentists for easy and effective learning."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -430,10 +430,7 @@
           <div class="info-widget">
             <h4 class="offset-title mb-20">About Us</h4>
             <p class="mb-30">
-              But I must explain to you how all this mistaken idea of denouncing
-              pleasure and praising pain was born and will give you a complete
-              account of the system and expound the actual teachings of the
-              great explore
+              A Comprehensive , all encompassing solution you could ever get for an adaptive  & technology  integrated   learning experience through out your journey from BDS to NEET MDS
             </p>
             <a class="theme_btn theme_btn_bg" href="contact.html">Contact Us</a>
           </div>
@@ -566,15 +563,11 @@
                     <div class="col-xs-1 vertical wow fadeInUp2 animated">
 
                 </div> <div class="col-xs-4"> <h5 class="mb-35 wow fadeInUp2 animated" data-wow-delay=".2s">
-                    The best guide you could ever get for your dental learning.
-                    A comprehensive, all-encompassing solution to learn the
-                    dental curriculum effectively.
+                    A Comprehensive , all encompassing solution you could ever get for an adaptive  & technology  integrated   learning experience through out your journey from BDS to NEET MDS
                   </h5></div>
                   </div> 
                 <h5  class="mb-35 wow fadeInUp2 d-md-none animated main-header" data-wow-delay=".2s">
-                    The best guide you could ever get for your dental learning.
-                    A comprehensive, all-encompassing solution to learn the
-                    dental curriculum effectively.
+                    A Comprehensive , all encompassing solution you could ever get for an adaptive  & technology  integrated   learning experience through out your journey from BDS to NEET MDS
                   </h5>
                   <ul
                     class="search__area d-md-inline-flex d-flex align-items-center "
@@ -1368,7 +1361,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title mb-10">
                         <a href="instructor-profile.html">Dr. M.S. Balakrishna</a>
                       </h4>
-                      <p>Oral and Maxillofacial Surgeon<br/>(Academic Director)</p>
+                      <p>BDS, MDS Oral and Maxillofacial Surgeon<br/>(Academic Director)</p>
                     </div>
                   </div>
                 </div>
@@ -1382,7 +1375,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title mb-10">
                         <a href="instructor-profile.html">Dr. Nandini</a>
                       </h4>
-                      <p>Anatomy</p>
+                      <p>MBBS , MD Anatomy</p>
                     </div>
                   </div>
                 </div>
@@ -1396,7 +1389,8 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title mb-10">
                         <a href="instructor-profile.html">Dr. Gopikrishnan V</a>
                       </h4>
-                      <p>Oral Pathology & General Pathology</p>
+                      <p>MDS Oral Pathology ,FHNP(MCC)
+Senior resident ,PGIDS</p>
                     </div>
                   </div>
                 </div>
@@ -1410,7 +1404,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                       <h4 class="sub-title mb-10">
                         <a href="instructor-profile.html">Dr. Shreshta Sathish</a>
                       </h4>
-                      <p>Prosthodontist</p>
+                      <p>MDS Prosthodontist And Implantologist</p>
                     </div>
                   </div>
                 </div>
@@ -2098,9 +2092,10 @@ if (data.length>3 && containerId === 'achiContainer') {
 
     // Call the function to populate the divs when the "Offers" button is clicked
     $(document).ready(function () {
-        $("#offersButton").on("click", function () {
-            fetchDataAndPopulateDivs();
-        });
+        fetchDataAndPopulateDivs();
+        // $("#offersButton").on("click", function () {
+        //     fetchDataAndPopulateDivs();
+        // });
     });
 </script>
 
