--- a/news-page.html
+++ b/news-page.html
@@ -513,7 +513,7 @@
           >
             <div class="footer__widget mb-30">
               <div class="footer-log mb-20">
-                <a href="index.html" class="logo">
+                <a href="index.html" class="logo-footer">
                   <img src="assets/img/logo/header_logo_one.png" alt="" />
                 </a>
               </div>
