--- a/sample-materials.html
+++ b/sample-materials.html
@@ -432,12 +432,12 @@
       <!-- blog-area start -->
       <section class="blog-area">
         <div
-          class="blog-bg pt-200 pb-10 pt-md-100 pb-md-70 pt-xs-100 pb-xs-70"
+          class="blog-bg pt-200 pb-10 pt-md-120 pb-md-70 pt-xs-130 pb-xs-70"
         >
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-8">
-                <div class="section-title text-center mb-60">
+                <div class="section-title text-center mb-60 ">
                   <h2 class="mb-25">NEET MDS Notes</h2>
                 </div>
               </div>
@@ -496,7 +496,7 @@
               </div>
             </div> -->
           </div>
-           <div class="container pt-xs-20 pt-50">
+           <div class="container pt-50">
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <div class="section-title text-center mb-60">
@@ -593,7 +593,7 @@
           >
             <div class="footer__widget mb-30">
               <div class="footer-log mb-20">
-                <a href="index.html" class="logo">
+                <a href="index.html" class="logo-footer">
                   <img src="assets/img/logo/header_logo_one.png" alt="" />
                 </a>
               </div>
