--- a/news-page.html
+++ b/news-page.html
@@ -657,8 +657,6 @@
         const thumb = document.createElement("div");
         thumb.className = "z-blogs__thumb mb-30";
 
-        const thumbLink = document.createElement("a");
-        thumbLink.href = item.link;
 
         const thumbImage = document.createElement("img");
         thumbImage.src = item.poster;
@@ -667,8 +665,8 @@
         thumbImage.style.height = '400px';
         thumbImage.style.objectFit = 'fill';
 
-        thumbLink.appendChild(thumbImage);
-        thumb.appendChild(thumbLink);
+
+        thumb.appendChild(thumbImage);
 
         const content = document.createElement("div");
         content.className = "z-blogs__content";
@@ -680,10 +678,7 @@
 
         const title = document.createElement("h4");
         title.className = "sub-title mb-15";
-        const titleLink = document.createElement("a");
-        titleLink.href = item.link;
-        titleLink.textContent = item.title;
-        title.appendChild(titleLink);
+        title.textContent = item.title;
 
         const meta = document.createElement("div");
         meta.className = "z-blogs__meta d-sm-flex justify-content-between pt-20";
