--- a/contact.html
+++ b/contact.html
@@ -335,7 +335,7 @@
             <a href="#">Quick Links</a>
             <ul class="sub-menu">
             <li><a href="sample-materials.html">Free Materials</a></li>
-            <li><a href="instructor-profile.html">Instructors</a></li>
+            <li><a href="instructor.html">Instructors</a></li>
             <li><a href="https://study.edentu.com/">Sign Up</a></li></ul>
             </li>  
           <li><a href="contact.html">Contacts Us</a></li>
