--- a/news-page.html
+++ b/news-page.html
@@ -429,7 +429,7 @@
             <a href="#">Quick Links</a>
             <ul class="sub-menu">
             <li><a href="sample-materials.html">Free Materials</a></li>
-            <li><a href="instructor-profile.html">Instructors</a></li>
+            <li><a href="instructor.html">Instructors</a></li>
             <li><a href="https://study.edentu.com/">Sign Up</a></li></ul>
             </li>  
           <li><a href="contact.html">Contacts Us</a></li>
@@ -675,6 +675,7 @@
         type.className = "mb-25";
         type.textContent = item.content||item.descp;
         type.style.textTransform = 'capitalize !important';
+        type.style.overflowWrap = 'break-word';
 
         const title = document.createElement("h4");
         title.className = "sub-title mb-15";
